# starlette-cramjam

./: .bumpversion.cfg  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
starlette_cramjam/: __init__.py  compression.py  middleware.py  version.py
tests/: __init__.py  test_middlewares.py
