[project]
name = "starlette-cramjam"
description = "Cramjam integration for Starlette ASGI framework."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
keywords = ["Cramjam", "Compression", "ASGI", "Starlette"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = ["starlette", "cramjam>=2.4,<2.12"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "brotlipy",
    "zstandard",
]
deploy = [
    "hatch",
]

[project.urls]
Source = "https://github.com/developmentseed/starlette-cramjam"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "starlette_cramjam/__init__.py"

[tool.hatch.build.targets.sdist]
only-include = ["starlette_cramjam/"]

[tool.hatch.build.targets.wheel]
only-include = ["starlette_cramjam/"]

[tool.isort]
profile = "black"
known_first_party = ["starlette_cramjam"]
known_third_party = ["starlette", "cramjam"]
default_section = "THIRDPARTY"

[tool.mypy]
no_strict_optional = "True"

[tool.ruff.lint]
select = [
    "D1",  # pydocstyle errors
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # flake8
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # ignore zip() without an explicit strict= parameter, only support with python >3.10
    "B028",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D1"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.bumpversion]
current_version = "0.6.0"
search = "{current_version}"
replace = "{new_version}"
regex = false
tag = true
commit = true
tag_name = "{new_version}"

[[tool.bumpversion.files]]
filename = "starlette_cramjam/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
