[metadata]
version = attr:starlette_cramjam.version.__version__

[bumpversion]
current_version = 0.1.0
commit = True
tag = True
tag_name = {new_version}

[bumpversion:file:starlette_cramjam/version.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[isort]
profile = black
known_first_party = starlette_cramjam
forced_separate = starlette

[flake8]
ignore = E501,W503,E203
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-complexity = 12
max-line-length = 90

[mypy]
no_strict_optional = True
ignore_missing_imports = True

